--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,13 @@ default-features = false
 version = "0.2.2"
 
 [dependencies.nrf51]
-features = ["rt"]
+default-features = false
 version = "0.4.0"
 
 [features]
 default = ["rt"]
-rt = []
+rt = ["nrf51/rt"]
+
 [profile.dev]
 debug = true
 lto = true
